Format Pass: Making it right

--- a/static/index.html
+++ b/static/index.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<title>cc-api-sandbox</title>
-<style>
-    code {
+  <head>
+    <title>cc-api-sandbox</title>
+    <style>
+      code {
         background-color: lightgray;
         color: black;
         padding: 0.1em 0.2em 0.1em 0.2em;
-    }
-</style>
-</head>
-<body>
-<h1>cc-api-sandbox</h1>
-The API server is running and working correctly! You can use <code>curl -X "&lt;METHOD&gt;" http://127.0.0.1:9000/&lt;api path&gt;</code>
-to access the API endpoints. As an example, you can use <code>curl -X "&lt;GET&gt;" http://127.0.0.1:9000/heartbeat</code> to get the
-uptime and API version of the sandbox.
-</body>
+      }
+    </style>
+  </head>
+  <body>
+    <h1>cc-api-sandbox</h1>
+    The API server is running and working correctly! You can use
+    <code>curl -X "&lt;METHOD&gt;" http://127.0.0.1:9000/&lt;api path&gt;</code>
+    to access the API endpoints. As an example, you can use
+    <code>curl -X "&lt;GET&gt;" http://127.0.0.1:9000/heartbeat</code> to get
+    the uptime and API version of the sandbox.
+  </body>
 </html>
